--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.4",
-    "vite": "^4.4.0",
-    "@vitejs/plugin-react": "^4.0.1"
+    "vite": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
