--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,21 @@
       {
         "allowSingleExtends": true
       }
+    ],
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "labelComponents": [
+          "CustomInputLabel"
+        ],
+        "labelAttributes": [
+          "label"
+        ],
+        "controlComponents": [
+          "CustomInput"
+        ],
+        "depth": 3
+      }
     ]
   }
 }
