--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@vitejs/plugin-react": "^4.0.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -17,7 +18,8 @@
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.4",
-    "vite": "^4.4.0"
+    "vite": "^4.4.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
