--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
         "depth": 3
       }
     ],
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "import/no-cycle": "off",
   }
 }
