--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "react/react-in-jsx-scope": "off",
     "react/jsx-uses-react": "off",
     "react/jsx-no-bind": "off",
+    "react/jsx-no-constructed-context-values": "off",
     "@typescript-eslint/no-empty-interface": [
       "error",
       {
@@ -36,6 +37,6 @@
       }
     ],
     "react/jsx-props-no-spreading": "off",
-    "import/no-cycle": "off",
+    "import/no-cycle": "off"
   }
 }
