esling no-param-reassing off

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
       }
     ],
     "react/jsx-props-no-spreading": "off",
-    "import/no-cycle": "off"
+    "import/no-cycle": "off",
+    "no-param-reassign": "off"
   }
 }
